# CPP-Learning

./: CMakeLists.txt  Main.cpp  main.cpp  mainMenu.cpp  math.cpp  messageSpam.cpp  programFunctions.cpp  programFunctions.h  roulette.cpp  roulette.h  testtttt.cpp  testtttt.h
OLD TEST STUFF/: mainMenu.h  math.h  messageSpam.h
ghStuff/: getModuleBaseAddress.cpp  getModuleBaseAddress.h
